wier/force-app/main/default/objects/COpportunity__c/fields/Strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Initiative__c</fullName>
    <label>Strategic Initiative</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>API 6A Valves</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Manifolds</fullName>
            </value>
            <value>
                <fullName>Mechanical Seal</fullName>
            </value>
            <value>
                <fullName>O &amp; M</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Swell Packer</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Wellheads</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ABC Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>