wier/force-app/main/default/objects/COpportunity__c/fields/Target_TAT__c.field-meta.xml
<CustomField>
    <fullName>Target_TAT__c</fullName>
    <formula>Due_Date__c -  CSR_Bid_Decision_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>