wier/force-app/main/default/objects/COpportunity__c/fields/Technical_Authority__c.field-meta.xml
<CustomField>
    <fullName>Technical_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Authority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Technical Authority)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>