wier/force-app/main/default/objects/COpportunity__c/fields/Tender_submitted_date_for_approval__c.field-meta.xml
<CustomField>
    <fullName>Tender_submitted_date_for_approval__c</fullName>
    <label>Tender submitted date for approval</label>
    <type>Date</type>
</CustomField>