wier/force-app/main/default/objects/COpportunity__c/fields/Tender_Value_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Tender_Value_in_USD__c</fullName>
    <label>Tender Value in USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>