wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Documents_fully_complied__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Documents_fully_complied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tendering Documents fully compiled</description>
    <label>Tendering Documents fully compiled</label>
    <type>Checkbox</type>
</CustomField>