wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Engineer_Email__c</fullName>
    <label>Tendering Engineer Email</label>
    <type>Email</type>
</CustomField>