wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tendering Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>UK CSR+TM</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Head of Tendering</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Senior Tendering Rep</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Aberdeen Tendering Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Commercial Sales</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Tendering Manager - Abu Dhabi</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Baku - Head of Tendering</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Regional Commercial Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>