wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager_Review_Comment__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_Review_Comment__c</fullName>
    <label>Tendering Manager Review Comment</label>
    <type>TextArea</type>
</CustomField>