wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager_Review_Comment_Final__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_Review_Comment_Final__c</fullName>
    <label>Tendering Manager&apos;s Comment</label>
    <type>TextArea</type>
</CustomField>