wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_Role__c</fullName>
    <label>Tendering Manager Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>