wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager_s_comment_on_Bid_No_Bi__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_s_comment_on_Bid_No_Bi__c</fullName>
    <label>TenderingManager&apos;s comment on Bid/No Bid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>