wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Manager_s_Decision_on_Bid__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_s_Decision_on_Bid__c</fullName>
    <label>Tendering Manager&apos;s Decision on Bid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>