wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Rep_Email__c</fullName>
    <formula>IF( ISBLANK( Tendering_Engineer_Email__c ) , Assign_Tendering_Representative__r.Email, Tendering_Engineer_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tendering Rep Email</label>
    <type>Text</type>
</CustomField>