wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Rep_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(LEFT( Tendering_Rep_Email__c ,  FIND(&apos;@&apos;, Tendering_Rep_Email__c)),&quot;.&quot;, &quot; &quot;), &quot;@&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tendering Rep Name</label>
    <type>Text</type>
</CustomField>