wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_task_assignment_date_del__c.field-meta.xml
<CustomField>
    <fullName>Tendering_task_assignment_date_del__c</fullName>
    <label>Tendering task assignment date</label>
    <type>Date</type>
</CustomField>