wier/force-app/main/default/objects/COpportunity__c/fields/Tendering_Team__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Team__c</fullName>
    <formula>IF((( $UserRole.Name = Tendering_Manager__r.UserRole.Name ) || ($UserRole.Name = Assign_Tendering_Representative__r.UserRole.Name )), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tendering Team</label>
    <type>Text</type>
</CustomField>