wier/force-app/main/default/objects/COpportunity__c/fields/TM_Mgr_email_for_Aberdeen__c.field-meta.xml
<CustomField>
    <fullName>TM_Mgr_email_for_Aberdeen__c</fullName>
    <label>TM Mgr email for Aberdeen</label>
    <type>Email</type>
</CustomField>