wier/force-app/main/default/objects/COpportunity__c/fields/TM_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>TM_Review_Comments__c</fullName>
    <label>TM Review Comments for approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>