wier/force-app/main/default/objects/COpportunity__c/fields/TM_s_comment_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>TM_s_comment_on_Opportunity__c</fullName>
    <label>TM&apos;s comment on Opportunity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>