wier/force-app/main/default/objects/COpportunity__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>Order acknowledged to</label>
    <type>Email</type>
</CustomField>