wier/force-app/main/default/objects/COpportunity__c/fields/TOM_email__c.field-meta.xml
<CustomField>
    <fullName>TOM_email__c</fullName>
    <defaultValue>&quot;tom.siminov@weirservices.com&quot;</defaultValue>
    <label>TOM email</label>
    <type>Email</type>
</CustomField>