wier/force-app/main/default/objects/COpportunity__c/fields/Total_amount_as_per_the_customer_order__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_as_per_the_customer_order__c</fullName>
    <label>Total amount as per the customer order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>