wier/force-app/main/default/objects/COpportunity__c/fields/Total_Cost_TC__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_TC__c</fullName>
    <label>Total Cost (TC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>