wier/force-app/main/default/objects/COpportunity__c/fields/Total_Handover_Checklist_Checked__c.field-meta.xml
<CustomField>
    <fullName>Total_Handover_Checklist_Checked__c</fullName>
    <label>Total Handover Checklist Checked</label>
    <summaryFilterItems>
        <field>Contract_CheckList__c.Wheather_Applicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_CheckList__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>