wier/force-app/main/default/objects/COpportunity__c/fields/Total_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Completed__c</fullName>
    <label>Total Job Completed</label>
    <summaryFilterItems>
        <field>Job_Updated_by_Planning__c.Job_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Updated_by_Planning__c.opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>