wier/force-app/main/default/objects/COpportunity__c/fields/Total_Job_ready_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_ready_for_Delivery__c</fullName>
    <description>Total Job ready for Delivery.</description>
    <label>Total Job ready for Delivery</label>
    <summaryFilterItems>
        <field>Job_Updated_by_Planning__c.Job_ready_for_Delivery__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Updated_by_Planning__c.opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>