wier/force-app/main/default/objects/COpportunity__c/fields/Total_Tendering_checklist_status__c.field-meta.xml
<CustomField>
    <fullName>Total_Tendering_checklist_status__c</fullName>
    <label>Total Tendering checklist status</label>
    <summaryFilterItems>
        <field>Check_List__c.Assignee_status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Check_List__c.Wheather_Applicable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Check_List__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>