wier/force-app/main/default/objects/COpportunity__c/fields/Total_Workorder__c.field-meta.xml
<CustomField>
    <fullName>Total_Workorder__c</fullName>
    <label>Total Workorder</label>
    <summaryForeignKey>Job_Updated_by_Planning__c.opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>