wier/force-app/main/default/objects/COpportunity__c/fields/Total_workorder_withoutname__c.field-meta.xml
<CustomField>
    <fullName>Total_workorder_withoutname__c</fullName>
    <label>Total workorder withoutname</label>
    <summaryFilterItems>
        <field>Job_Updated_by_Planning__c.Work_Order_number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Updated_by_Planning__c.opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>