wier/force-app/main/default/objects/COpportunity__c/fields/Type_of_activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_activity__c</fullName>
    <label>Type of activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spares</fullName>
            </value>
            <value>
                <fullName>Repair / Service (workshop)</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Consultancy</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Manufacturing - NEW</fullName>
            </value>
            <value>
                <fullName>Control System Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>