wier/force-app/main/default/objects/COpportunity__c/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pressure Control</fullName>
            </value>
            <value>
                <fullName>OCTG</fullName>
            </value>
            <value>
                <fullName>API Oilfield</fullName>
            </value>
            <value>
                <fullName>Rotating Equipment</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>