wier/force-app/main/default/objects/COpportunity__c/fields/Type_of_customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_customer__c</fullName>
    <formula>TEXT(Customer__r.Type_of_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of customer</label>
    <type>Text</type>
</CustomField>