wier/force-app/main/default/objects/COpportunity__c/fields/Upsell_amount__c.field-meta.xml
<CustomField>
    <fullName>Upsell_amount__c</fullName>
    <label>Upsell amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>