wier/force-app/main/default/objects/COpportunity__c/fields/Upsell_in_cost_sheet__c.field-meta.xml
<CustomField>
    <fullName>Upsell_in_cost_sheet__c</fullName>
    <label>Upsell in cost sheet(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>