wier/force-app/main/default/objects/COpportunity__c/fields/Upsell_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Upsell_opportunity__c</fullName>
    <label>Upsell opportunity (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>