wier/force-app/main/default/objects/COpportunity__c/fields/Value_for_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Value_for_pipeline__c</fullName>
    <formula>IF( Selling_price_in_Quotation__c &gt;0, Selling_price_in_Quotation__c,  Expected_Quotation_value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value for pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>