wier/force-app/main/default/objects/COpportunity__c/fields/When_tender_to_be_ready_for_review__c.field-meta.xml
<CustomField>
    <fullName>When_tender_to_be_ready_for_review__c</fullName>
    <label>When tender to be ready for review</label>
    <type>Date</type>
</CustomField>