wier/force-app/main/default/objects/COpportunity__c/fields/Win_Loss_Tag__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Tag__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Initial Review&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Bid/No Bid&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Approved for Tendering&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Quotation under compilation&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Tender Under Review&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Tender Under Approval&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Approved, Make Quotation ready for submitial&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Quote Ready for Submital&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Quote Submitted to Customer&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Customer Contacted for Submitted quote&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;Quotation under clarification with Customer&apos;), &apos;Open&apos;, IF(ISPICKVAL(Status__c, &apos;PO received&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;PO Under Clarification&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;PO handed over to Contract&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;PO under Review with Contract&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;PO Approved by Contract&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Customer order acknowledged&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;PO handover to Planning&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Job handover to Operations&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Job done awaiting contracts sign-off&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Job ready for Delivery&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;job delivered&apos;), &apos;Won&apos;, IF((ISPICKVAL(Status__c, &apos;Opportunity closed&apos;) &amp;&amp; No_of_quotes_attached__c &gt; 0 &amp;&amp; No_of_PO_attached_del__c = 0), &apos;Quote Lost&apos;,IF((ISPICKVAL(Status__c, &apos;Opportunity closed&apos;) &amp;&amp; No_of_quotes_attached__c &gt; 0 &amp;&amp; No_of_PO_attached_del__c &gt; 0), &apos;Won&apos;,IF((ISPICKVAL(Status__c, &apos;Opportunity closed&apos;) &amp;&amp; No_of_quotes_attached__c = 0), &apos;Bid Decline&apos;,IF(ISPICKVAL(Status__c, &apos;Quote accepted but PO awaited&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Customer notified of a Completed Job&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Invoicing onhold&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Job invoiced in movex&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Partial Collected&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Fully Collected&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Invoice sent&apos;), &apos;Won&apos;, IF(ISPICKVAL(Status__c, &apos;Quoted &amp; Lost&apos;), &apos;Lost&apos;, &apos;&apos;)))))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win/Loss Tag</label>
    <type>Text</type>
</CustomField>