wier/force-app/main/default/objects/COpportunity__c/fields/Win_Prob__c.field-meta.xml
<CustomField>
    <fullName>Win_Prob__c</fullName>
    <formula>TEXT( Win_Probability__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Prob</label>
    <type>Text</type>
</CustomField>