wier/force-app/main/default/objects/COpportunity__c/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <label>Win probability (%)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>