wier/force-app/main/default/objects/COpportunity__c/fields/Winning_Price_AED__c.field-meta.xml
<CustomField>
    <fullName>Winning_Price_AED__c</fullName>
    <label>Winning Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>