wier/force-app/main/default/objects/COpportunity__c/recordTypes/Approved_for_Tendering.recordType-meta.xml
<RecordType>
    <fullName>Approved_for_Tendering</fullName>
    <active>true</active>
    <description>Approved for Tendering</description>
    <label>Approved for Tendering</label>
</RecordType>