wier/force-app/main/default/objects/COpportunity__c/recordTypes/Approved_make_quote_ready.recordType-meta.xml
<RecordType>
    <fullName>Approved_make_quote_ready</fullName>
    <active>true</active>
    <description>Approved make quote ready</description>
    <label>Approved make quote ready</label>
</RecordType>