wier/force-app/main/default/objects/COpportunity__c/recordTypes/Bid_No_Bid.recordType-meta.xml
<RecordType>
    <fullName>Bid_No_Bid</fullName>
    <active>true</active>
    <description>Bid_No_Bid</description>
    <label>Bid/No Bid</label>
</RecordType>