wier/force-app/main/default/objects/COpportunity__c/recordTypes/Bid_No_Bid_With_Submit.recordType-meta.xml
<RecordType>
    <fullName>Bid_No_Bid_With_Submit</fullName>
    <active>true</active>
    <label>Bid/No Bid With Submit</label>
</RecordType>