wier/force-app/main/default/objects/COpportunity__c/recordTypes/Fully_Collected.recordType-meta.xml
<RecordType>
    <fullName>Fully_Collected</fullName>
    <active>true</active>
    <description>Fully Collected</description>
    <label>Fully Collected</label>
</RecordType>