wier/force-app/main/default/objects/COpportunity__c/recordTypes/Handed_over_to_Operation.recordType-meta.xml
<RecordType>
    <fullName>Handed_over_to_Operation</fullName>
    <active>true</active>
    <description>Handed over to Operation</description>
    <label>Handed over to Operation</label>
</RecordType>