wier/force-app/main/default/objects/COpportunity__c/recordTypes/Initial_Review.recordType-meta.xml
<RecordType>
    <fullName>Initial_Review</fullName>
    <active>true</active>
    <description>Initial Review</description>
    <label>Initial Review</label>
</RecordType>