wier/force-app/main/default/objects/COpportunity__c/recordTypes/Initial_Review_HOT.recordType-meta.xml
<RecordType>
    <fullName>Initial_Review_HOT</fullName>
    <active>true</active>
    <description>Initial Review HOT</description>
    <label>Initial Review HOT</label>
</RecordType>