wier/force-app/main/default/objects/COpportunity__c/recordTypes/Invoice_Sent.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Sent</fullName>
    <active>true</active>
    <description>Invoice Sent</description>
    <label>Invoice Sent</label>
</RecordType>