wier/force-app/main/default/objects/COpportunity__c/recordTypes/Invoiced_in_movex.recordType-meta.xml
<RecordType>
    <fullName>Invoiced_in_movex</fullName>
    <active>true</active>
    <description>Invoiced in movex</description>
    <label>Invoiced in movex</label>
</RecordType>