wier/force-app/main/default/objects/COpportunity__c/recordTypes/Invoicing_onhold.recordType-meta.xml
<RecordType>
    <fullName>Invoicing_onhold</fullName>
    <active>true</active>
    <description>Invoicing onhold</description>
    <label>Invoicing onhold</label>
</RecordType>