wier/force-app/main/default/objects/COpportunity__c/recordTypes/Job_completed_notify_contract.recordType-meta.xml
<RecordType>
    <fullName>Job_completed_notify_contract</fullName>
    <active>true</active>
    <description>Job completed notify contract</description>
    <label>Job completed notify contract</label>
</RecordType>