wier/force-app/main/default/objects/COpportunity__c/recordTypes/Job_delivered.recordType-meta.xml
<RecordType>
    <fullName>Job_delivered</fullName>
    <active>true</active>
    <description>Job delivered</description>
    <label>Job delivered</label>
</RecordType>