wier/force-app/main/default/objects/COpportunity__c/recordTypes/Job_ready_for_delivery.recordType-meta.xml
<RecordType>
    <fullName>Job_ready_for_delivery</fullName>
    <active>true</active>
    <description>Job ready for delivery</description>
    <label>Job ready for delivery</label>
</RecordType>