wier/force-app/main/default/objects/COpportunity__c/recordTypes/Opportunity_Closed_record_Type.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Closed_record_Type</fullName>
    <active>true</active>
    <description>Opportunity Closed record Type</description>
    <label>Opportunity Closed record Type</label>
</RecordType>