wier/force-app/main/default/objects/COpportunity__c/recordTypes/Payment_received.recordType-meta.xml
<RecordType>
    <fullName>Payment_received</fullName>
    <active>true</active>
    <description>Payment received</description>
    <label>Payment received</label>
</RecordType>