wier/force-app/main/default/objects/COpportunity__c/recordTypes/PO_handed_over_to_planning.recordType-meta.xml
<RecordType>
    <fullName>PO_handed_over_to_planning</fullName>
    <active>true</active>
    <description>PO handed over to planning</description>
    <label>PO handed over to planning</label>
</RecordType>