wier/force-app/main/default/objects/COpportunity__c/recordTypes/PO_received.recordType-meta.xml
<RecordType>
    <fullName>PO_received</fullName>
    <active>true</active>
    <description>PO received</description>
    <label>PO received</label>
</RecordType>