wier/force-app/main/default/objects/COpportunity__c/recordTypes/PO_under_Clarification.recordType-meta.xml
<RecordType>
    <fullName>PO_under_Clarification</fullName>
    <active>true</active>
    <label>PO under Clarification</label>
</RecordType>