wier/force-app/main/default/objects/COpportunity__c/recordTypes/Quotation_under_Clarification_with_Customer.recordType-meta.xml
<RecordType>
    <fullName>Quotation_under_Clarification_with_Customer</fullName>
    <active>true</active>
    <label>Quotation under Clarification with Customer</label>
</RecordType>