wier/force-app/main/default/objects/COpportunity__c/recordTypes/Quotation_Under_Compilation.recordType-meta.xml
<RecordType>
    <fullName>Quotation_Under_Compilation</fullName>
    <active>true</active>
    <description>Quotation Under Compilation</description>
    <label>Quotation Under Compilation</label>
</RecordType>