wier/force-app/main/default/objects/COpportunity__c/recordTypes/Quote_Ready_for_Submittal.recordType-meta.xml
<RecordType>
    <fullName>Quote_Ready_for_Submittal</fullName>
    <active>true</active>
    <description>Quote Ready for Submittal</description>
    <label>Quote Ready for Submittal</label>
</RecordType>