wier/force-app/main/default/objects/COpportunity__c/recordTypes/Tender_Under_Approval.recordType-meta.xml
<RecordType>
    <fullName>Tender_Under_Approval</fullName>
    <active>true</active>
    <description>Tender Under Approval</description>
    <label>Tender Under Approval</label>
</RecordType>