wier/force-app/main/default/objects/COpportunity__c/recordTypes/Tender_Under_Approval_Final.recordType-meta.xml
<RecordType>
    <fullName>Tender_Under_Approval_Final</fullName>
    <active>true</active>
    <description>Tender Under Approval - Final</description>
    <label>Tender Under Approval - Final</label>
</RecordType>