wier/force-app/main/default/objects/COpportunity__c/recordTypes/Tender_Under_Review.recordType-meta.xml
<RecordType>
    <fullName>Tender_Under_Review</fullName>
    <active>true</active>
    <label>Tender Under Review</label>
</RecordType>