wier/force-app/main/default/objects/COpportunity__c/recordTypes/Tendere_Under_Review_QuotaFinal.recordType-meta.xml
<RecordType>
    <fullName>Tendere_Under_Review_QuotaFinal</fullName>
    <active>true</active>
    <description>Tendere Under Review QuotaFinal</description>
    <label>Tendere Under Review QuotaFinal</label>
</RecordType>