wier/force-app/main/default/objects/COpportunity__c/validationRules/Account_Status_Blocked_Opp_PO_received.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Status_Blocked_Opp_PO_received</fullName>
    <active>true</active>
    <description>When Account Status is &quot;Blocked&quot; and Opportunity Stage is &quot;PO received&quot;, Opportunity should be freezed then</description>
    <errorConditionFormula>AND( Text(Customer__r.Account_Status__c ) == &apos;Suspended&apos;, IsChanged(  Status__c  ))</errorConditionFormula>
    <errorMessage>Opportunity cannot be edited, Account is Suspended</errorMessage>
</ValidationRule>