wier/force-app/main/default/objects/COpportunity__c/validationRules/Account_Status_is_Blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Status_is_Blocked</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(Text(Customer__r.Account_Status__c) == &apos;Blocked&apos;,Text(Customer__r.Account_Status__c) == &apos;InActive&apos;), IsChanged( Status__c ), False)</errorConditionFormula>
    <errorMessage>Account is Blocked.</errorMessage>
</ValidationRule>